 - Qt: Show list of all sprites in sprite view
 - Qt: Add option for disabling OSD messages
 - Qt, OpenGL: Disable integer scaling for dimensions that don't fit
 - Switch: Dynamic display resizing
 - Switch: Support file associations
 - Vita: L2/R2 and L3/R3 can now be mapped on PSTV (fixes mgba.io/i/1292)
Changes from beta 1:
Emulation fixes:
 - GBA DMA: Fix case where DMAs could get misaligned (fixes mgba.io/i/1092)
Other fixes:
 - 3DS: Fix screen darkening (fixes mgba.io/i/1562)
 - Vita: Fix analog controls (fixes mgba.io/i/1554)

0.8 beta 1: (2019-10-20)
- Initial beta for 0.8

0.7.3: (2019-09-15)
Emulation fixes:
 - GB: Fix savedata initialization (fixes mgba.io/i/1473, mgba.io/i/1478)
 - GB: Fix SGB controller incrementing (fixes mgba.io/i/1104)
 - GB Audio: Improve channel 4 supersampling
 - GB Printer: Reset printer buffer index after printing
 - GB Audio: Deschedule channel 3 when disabled (fixes mgba.io/i/1463)
 - GB Audio: Deschedule channel 1 when disabled by sweep (fixes mgba.io/i/1467)
 - GB Video: Increment BCPS/OCPS even in mode 3 (fixes mgba.io/i/1462)
 - GBA Memory: Fix STM to VRAM (fixes mgba.io/i/1430)
 - GBA Memory: Fix STM/LDM to invalid VRAM
 - GBA Video: Fix wrapped sprite mosaic clamping (fixes mgba.io/i/1432)
 - GBA Audio: Fix channel 4 aliasing (fixes mgba.io/i/1265)
Other fixes:
 - Core: Fix crashes if core directories aren't set
 - Core: Fix crash when exiting game with cheats loaded
 - GBA: Set up GPIO mapping on null and ELF ROM regions (fixes mgba.io/i/1481)
 - GBA Cheats: Fix PARv3 Thumb hooks
 - GBA Cheats: Fix value incrementing in CB slide codes (fixes mgba.io/i/1501)
 - Qt: Fix FPS target maxing out at 59.727 (fixes mgba.io/i/1421)
 - Qt: Cap audio buffer size to 8192 (fixes mgba.io/i/1433)
 - Qt: Fix race conditions initializing GDB stub
 - Qt: Improve cheat view UX
 - Libretro: Fix crash changing allowing opposing directions (hhromic)
 - mGUI: Fix crash if last loaded ROM directory disappears (fixes mgba.io/i/1466)