@@ -87,6 +87,7 @@ Misc:
  - Vita: L2/R2 and L3/R3 can now be mapped on PSTV (fixes mgba.io/i/1292)
 Changes from beta 1:
 Emulation fixes:
+ - ARM: Fix STR writeback pipeline stage
  - GBA DMA: Fix case where DMAs could get misaligned (fixes mgba.io/i/1092)
 Other fixes:
  - 3DS: Fix screen darkening (fixes mgba.io/i/1562)
